--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    i am sherry iiiihuhh
+    i am sherryiihuhh
 
 </body>
+<div>my computer</div>
+
 </html>
