--- a/css_box_model0108.html
+++ b/css_box_model0108.html
@@ -11,9 +11,17 @@
     <link rel="stylesheet" href="css/css_box_model_0108.css">
 </head>
 <body>
+ 
   <div class="box">
     <div>BOX1</div>
   </div>
-    
+
+  <div class="box2">
+    Hi Hi</div>
+
+  <div style="text-align: center;">
+    <span class="button">加入購物車</span>
+    <span class="button">馬上購買</span>
+  </div>
 </body>
 </html>
