--- a/css_base0108.html
+++ b/css_base0108.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <div style="color:rgb(24, 18, 51);">屬性宣告</div>
-    <div style="color:rgb(28, 21, 49);">屬性宣告2</div>
+    <div style="color:rgb(28, 21, 49);">屬2性宣告2</div>
 </body>
 </html>
