--- a/public/0402_todo.html
+++ b/public/0402_todo.html
@@ -31,6 +31,10 @@
         </div>
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.10.0/firebase.js"
+    integrity="sha512-7NBxPO/qRUrKc+Wi9GbYz0YEzMpi2UMP3mtLcswnvzI0vUFP5Jb7HNVd1V8NmEhXpSe3ZLsoGEhwRHpAZDpYPQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="js/firebase.js"></script>
 <script src="js/0402_todo.js"></script>
 
 </html>
